--- a/public/theme/YoshiKan2023/index.twig
+++ b/public/theme/YoshiKan2023/index.twig
@@ -4,31 +4,96 @@
 
     {% if record|default %}
 
-        <h1>{{ record|title }}</h1>
+        {# banner ----------------------------------------------------------- #}
+        <div>
+            <img src="{{ asset('img/banner_2.jpg') }}"
+                 class="w-full" alt="Yoshi Kan, judoschool voor jong en oud."
+                 border="0"/>
+        </div>
 
-        <div class="bg-gray-900 p-2 text-white rounded-lg">
-            Test own template.
+        {# content ----------------------------------------------------------- #}
+        <div class="content-wrapper p-4">
+            <div class="md:flex md:flex-row mb-4">
+                <div class="md:basis-1/2 mr-4">
+                    <h1>WELKOM BIJ JUDOCLUB YOSHI-KAN</h1>
+                    <div class="mt-2">
+                        <p>Judosport is één van de vele Olympische topsporten in ons land. Judo is de sport bij uitstek,
+                            om
+                            je zowel fysiek als mentaal te ontwikkelen. Met respect, zelfvertrouwen en discipline als
+                            belangrijkste peilers.
+                        </p>
+                        <p>
+                            Spelenderwijs leren kinderen een brede waaier aan valtechnieken, worpen
+                            en houdgrepen, leren ze omgaan met winst en verlies. Jongeren en volwassenen worden
+                            technisch
+                            begeleid. Dit alles in een ongedwongen clubsfeer, waar iedereen zich thuis voelt!
+                        </p>
+                    </div>
+                </div>
+                <div class="md:basis-1/2">
+                    <h1>VOOR JONG EN OUD</h1>
+                    <div class="mt-2">
+                        <p>
+                            Je kan in onze club terecht, voor zowel recreatief als competitief judo. Jongeren worden op
+                            respectvolle en verantwoorde wijze voorbereid en begeleid op wedstrijden, aangepast aan hun
+                            niveau.
+                        </p>
+                        <p>
+                            Kom je liever voor het plezier?
+                            Ook daar hebben we oog voor! Aarzel niet en kom zeker eens proeven van 2 gratis judolessen.
+                        </p>
+                        <p>
+                            <strong>Je bent van harte welkom!</strong>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            {# visuals ----------------------------------------------------------- #}
+            <div class="flex flex-row">
+                <div class="basis-1/3 mr-4">
+                    <img src="{{ asset('img/stacks_image_94.jpg') }}"
+                         class="w-full" alt="Yoshi Kan, judoschool voor jong en oud."
+                         border="0"/>
+                </div>
+                <div class="basis-1/3 mr-4 ml-4">
+                    <img src="{{ asset('img/stacks_image_90.jpg') }}"
+                         class="w-full" alt="Yoshi Kan, judoschool voor jong en oud."
+                         border="0"/>
+                </div>
+                <div class="basis-1/3 ml-4">
+                    <img src="{{ asset('img/stacks_image_92.jpg') }}"
+                         class="w-full" alt="Yoshi Kan, judoschool voor jong en oud."
+                         border="0"/>
+                </div>
+            </div>
+
+            {#            <h1>{{ record|title }}</h1> #}
+            {#            <div class="bg-gray-900 p-2 text-white rounded-lg"> #}
+            {#                Test own template. #}
+            {#            </div> #}
+            {#            <br>&nbsp; #}
+
         </div>
 
         {# Remove this block if you don't need it anymore. #}
-        {{ include('partials/_fresh_install.twig') }}
-
+        {#        {{ include('partials/_fresh_install.twig') }} #}
         {# Output the `introduction` field. If it doesn't exist, 'default' to
            the full excerpt of the current Record #}
-        {{ record.introduction|default(record|excerpt) }}
-
-        {% include 'partials/_image.twig' with ({'image': record|image}) %}
-
-        {{ record.content }}
-
-        {{ include('partials/_recordfooter.twig', { 'record': record }) }}
+        {#        {{ record.introduction|default(record|excerpt) }} #}
+        {# #}
+        {#        {% include 'partials/_image.twig' with ({'image': record|image}) %} #}
+        {# #}
+        {#        {{ record.content }} #}
+        {# #}
+        {#        {{ include('partials/_recordfooter.twig', { 'record': record }) }} #}
 
     {% endif %}
 
 {% endblock main %}
 
-{% block aside %}
-
-    {{ include('partials/_aside.twig') }}
-
-{% endblock aside %}
+{# {% block aside %} #}
+{# #}
+{#    {{ include('partials/_aside.twig') }} #}
+{# #}
+{# {% endblock aside %} #}
