--- a/public/theme/YoshiKan2023/inschrijven.twig
+++ b/public/theme/YoshiKan2023/inschrijven.twig
@@ -2,15 +2,11 @@
 
 {% block main %}
     {% if record|default %}
-
-        {% include 'partials/_image.twig' with ({'image': record|image}) %}
-
         <div class="content-wrapper p-10">
             <h1>{{ record|title }}</h1>
             <div>
-                {{ record.body }}
+                {{ record.content }}
             </div>
         </div>
-
     {% endif %}
 {% endblock main %}
