--- a/public/theme/YoshiKan2023/partials/_footer.twig
+++ b/public/theme/YoshiKan2023/partials/_footer.twig
@@ -21,6 +21,12 @@
                     </div>
                     <div class="footer-nav ml-4 basis-1/3">
                         {{ menu(name = 'footer_c3', template='partials/_menu_footer.twig', withsubmenus= true) }}
+
+                        <div class="facebook-link text-3xl mt-4 pt-2">
+                            <a href="https://nl-nl.facebook.com/yoshi.kan.16" target="_blank">
+                                <i class="fa-brands fa-square-facebook"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
