--- a/public/theme/YoshiKan2023/partials/_footer.twig
+++ b/public/theme/YoshiKan2023/partials/_footer.twig
@@ -24,7 +24,7 @@
 
                         <div class="facebook-link text-3xl mt-4 pt-2">
                             <a href="https://nl-nl.facebook.com/yoshi.kan.16" target="_blank">
-                                <i class="fa-brands fa-square-facebook"></i>
+                                <i class="mdi mdi-facebook"></i>
                             </a>
                         </div>
                     </div>
