--- a/public/theme/YoshiKan2023/partials/_header.twig
+++ b/public/theme/YoshiKan2023/partials/_header.twig
@@ -6,7 +6,7 @@
                 <a id="resp-menu" class="responsive-menu" href="#"><i class="fa fa-reorder"></i> Menu</a>
                 <ul class="menu">
                     {# home button ---------------------------------------------------------------- #}
-                    <li><a class="home" href="/"><i class="fa fa-home"></i> Yoshi-Kan</a></li>
+                    <li><a class="home" href="/"><i class="mdi mdi-home"></i> Yoshi-Kan</a></li>
                     {# top menu ------------------------------------------------------------------- #}
                     {{ menu(name = 'top', template='partials/_menu_header.twig', withsubmenus= true) }}
                 </ul>
