--- a/public/theme/YoshiKan2023/admin/admin_member_module.html.twig
+++ b/public/theme/YoshiKan2023/admin/admin_member_module.html.twig
@@ -1,3 +1,12 @@
+{#/*#}
+{#* This file is part of the Yoshi-Kan software.#}
+{#*#}
+{#* (c) Koen Caerels#}
+{#*#}
+{#* For the full copyright and license information, please view the LICENSE#}
+{#* file that was distributed with this source code.#}
+{#*/#}
+
 {% extends '@bolt/_base/layout.html.twig' %}
 
 {% block title %}{% endblock %}
