--- a/frontends/member_module/src/assets/application.css
+++ b/frontends/member_module/src/assets/application.css
@@ -20,10 +20,27 @@ body {
     padding: 0 !important;
 }
 
+.ghost::after {
+    background: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 9999;
+    content: '';
+    outline: none;
+    border-radius: 15px;
+}
+
 /* -- tab fix */
 
 .p-menuitem-link:focus {
     box-shadow: 0 0 0 0 !important;
+}
+
+th {
+    text-align: left !important;
 }
 
 /* -- toaster fix */
@@ -45,4 +62,11 @@ body {
 
 .p-toast-bottom-right {
     bottom: 30px !important;
+}
+
+/* -- configuration wrapper */
+
+.configurationWrapper {
+    display: block;
+    max-width: 700px;
 }
