Preparing some command.

--- a/frontends/member_module/src/assets/application.css
+++ b/frontends/member_module/src/assets/application.css
@@ -52,6 +52,12 @@ th {
     text-align: left !important;
 }
 
+label {
+    display: inline !important;
+    margin-bottom:0px !important;
+    font-weight:normal !important;
+}
+
 /* -- toaster fix */
 
 .p-toast-message-content {
