--- a/application/YoshiKan/Infrastructure/Templates/mail/payment_overview_mail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/mail/payment_overview_mail.html.twig
@@ -48,7 +48,7 @@
         <strong>Totaal: {{ subscription.total }} €</strong>
         <br>Gelieve bovenstaand bedrag over te schrijven
         <br>op rekeningnummer BE37 7330 0101 8328 (BIC KREDBEBB)
-        <br>met als referentie: "YK-{{ subscription.id }}
+        <br>met als referentie: "YKS-{{ subscription.id }}
         {{ subscription.firstname }} {{ subscription.lastname }}".
     </p>
     <p>
