--- a/application/YoshiKan/Infrastructure/Templates/mail/web_confirmation_mail.html.twig
+++ b/application/YoshiKan/Infrastructure/Templates/mail/web_confirmation_mail.html.twig
@@ -15,7 +15,7 @@
         {% endif %}
     </p>
     <p>
-        <strong>Referentie: YK-{{ subscription.id }}</strong>
+        <strong>Referentie: YKS-{{ subscription.id }}</strong>
         <br><br><strong>{{ subscription.period.name }}</strong>
         <br>- Locatie: {{ subscription.location.name }}
         <br>- Type: {{ subscription.type.value }},
