Setup cypress end to end testing.

--- a/public/theme/YoshiKan2023/index.twig
+++ b/public/theme/YoshiKan2023/index.twig
@@ -21,7 +21,7 @@
                     </div>
                     <div style="width:250px;margin:auto;display: block;height:75px;" class="pt-2">
                         <a href="/inschrijven"
-                           style="color:white;text-decoration: none;"
+                           style="color:white;text-decoration: none;" data-cy="home_subscription"
                            class="w-full p-4 bg-blue-900 text-white rounded-lg text-xl uppercase hover:bg-blue-700">
                             Online inschrijven
                         </a>
