--- a/public/theme/YoshiKan2023/partials/_menu_footer.twig
+++ b/public/theme/YoshiKan2023/partials/_menu_footer.twig
@@ -7,6 +7,7 @@
         {% if item.uri != '/' %}
             <div>
                 <a href="{{ item.uri }}"
+                   {% if item.class != ''%}data-cy="{{ item.class }}" {% endif %}
                    class="{% if item.class != ''%}{{ item.class }} {% endif %}{{ loop.first ? ' first' -}}{{ loop.last ? ' last' -}}{{ item|current ? ' active' }}">
                     {{- item.label -}}
                 </a>
