Offline material design icons. Updated composer.lock file E2E subscription links

--- a/public/theme/YoshiKan2023/partials/_master.twig
+++ b/public/theme/YoshiKan2023/partials/_master.twig
@@ -19,7 +19,7 @@
         {{ encore_entry_link_tags('tailwind', null, 'frontend') }}
         {{ encore_entry_link_tags('app', null, 'frontend') }}
         {{ encore_entry_link_tags('menu', null, 'frontend') }}
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css">
+        <link rel="stylesheet" href="{{ asset('css/materialdesignicons.min.css') }}">
     {% endblock %}
 </head>
 <body>
